#23 Add group member api (#31)
* draft

* finish add group member api

* add documentation

* fix addGroupMember documentation status 200
